# hyprfocus

./: CHANGELOG.md  Cargo.toml  README.md  flake.nix
src/: cli.rs  errors.rs  main.rs  shader.rs  state.rs
