[package]
name = "hypr-vogix"
version = "1.7.0"
edition = "2024"
authors = ["i-am-logger"]
description = "Monochromatic screen overlay for Hyprland"
license = "CC-BY-NC-SA-4.0"
repository = "https://github.com/i-am-logger/hypr-vogix"
keywords = ["hyprland", "wayland", "shader", "monochrome", "overlay"]
categories = ["command-line-utilities"]

[dependencies]
# CLI
clap = { version = "4.5", features = ["derive"] }

# Logging
log = "0.4"
env_logger = "0.11"

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"

[dev-dependencies]
serial_test = "3.2"
